# pg-migration-lint

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  LICENSE-APACHE  LICENSE-MIT  Makefile  PLAN_PGM012_PGM021.md  PLAN_SONARQUBE_UPGRADE.md  README.md  REPORT.md  SECURITY.md  SPEC.md  codecov.yml  deny.toml  implementation_plan.md  phase_0_type_trait_definitions.md  test_plan.md
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  verify-pg.yml
bridge/: .dockerignore  Dockerfile  Makefile  README.md  build.sh  pom.xml
docs/: PARTITION_SUPPORT.md  PROPOSED_RULES.md  SONARQUBE_PLUGIN.md  _config.yml  dont-do-this-rules.md  github-actions.md  index.md  liquibase.md  pg_query_spike.md  rules.md  rules.md.j2  sonarqube.md
docs/examples/: pgm001_body.md  pgm002_body.md  pgm003_body.md  pgm004_body.md  pgm005_body.md  pgm006_body.md  pgm007_body.md  pgm008_body.md  pgm009_body.md  pgm010_body.md  pgm011_body.md  pgm012_body.md  pgm013_body.md  pgm014_body.md  pgm015_body.md  pgm016_body.md  pgm017_body.md  pgm018_body.md  pgm019_body.md  pgm020_body.md  pgm021_body.md  pgm022_body.md  pgm023_body.md  pgm101_body.md  pgm102_body.md  pgm103_body.md  pgm104_body.md  pgm105_body.md  pgm106_body.md  pgm107_body.md  pgm108_body.md  pgm109_body.md  pgm201_body.md  pgm202_body.md  pgm203_body.md  pgm204_body.md  pgm205_body.md  pgm301_body.md  pgm302_body.md  pgm303_body.md  (+13 more)
examples/: pg-migration-lint.liquibase.toml
scripts/: test-docker.sh
src/: config.rs  docgen.rs  lib.rs  main.rs  normalize.rs  pipeline.rs  suppress.rs
src/catalog/: builder.rs  mod.rs  replay.rs  types.rs
src/input/: liquibase_bridge.rs  liquibase_updatesql.rs  liquibase_xml.rs  mod.rs  sql.rs
src/output/: mod.rs  sarif.rs  sonarqube.rs  test_helpers.rs  text.rs
src/parser/: ir.rs  mod.rs  pg_query.rs
src/rules/: alter_table_check.rs  column_type_check.rs  drop_column_check.rs  existing_table_check.rs  finding.rs  fn_volatility.rs  fn_volatility_tests.rs  lint_context.rs  mod.rs  pgm001.rs  pgm002.rs  pgm003.rs  pgm004.rs  pgm005.rs  pgm006.rs  pgm007.rs  pgm008.rs  pgm009.rs  pgm010.rs  pgm011.rs  pgm012.rs  pgm013.rs  pgm014.rs  pgm015.rs  pgm016.rs  pgm017.rs  pgm018.rs  pgm019.rs  pgm020.rs  pgm021.rs  pgm022.rs  pgm023.rs  pgm024.rs  pgm101.rs  pgm102.rs  pgm103.rs  pgm104.rs  pgm105.rs  pgm106.rs  pgm107.rs  (+27 more)
tests/: baseline.rs  bridge.rs  catalog_ops.rs  common.rs  config.rs  cross_file_fk.rs  e2e.rs  enterprise.rs  go_migrate.rs  integration.rs  matrix.rs  output_formats.rs  pg_query_spike.rs  schema.rs
verify/: docker-compose.yml  gen-fn-volatility.sh  gen-reserved-keywords.sh  run.sh
verify/lib/: runner.sh  (+1 more)
(+482 files in other folders)
