[package]
name = "pg-migration-lint"
version = "1.2.1"
edition = "2024"
authors = ["pg-migration-lint contributors"]
description = "Static analyzer for PostgreSQL migration files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robert-sjoblom/pg-migration-lint"

[[bin]]
name = "pg-migration-lint"
path = "src/main.rs"

[lib]
name = "pg_migration_lint"
path = "src/lib.rs"

[dependencies]
# Core parsing
pg_query = "6.1"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.12"

# XML parsing for Liquibase
quick-xml = "0.39.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
# Snapshot testing
insta = { version = "1.34", features = ["json", "yaml"] }

# Property-based testing
proptest = "1.4"

# Temporary directories for tests
tempfile = "3.8"
