[package]
name = "pg-migration-lint"
version = "2.9.0"
edition = "2024"
authors = ["pg-migration-lint contributors"]
description = "Static analyzer for PostgreSQL migration files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/robert-sjoblom/pg-migration-lint"

[[bin]]
name = "pg-migration-lint"
path = "src/main.rs"

[lib]
name = "pg_migration_lint"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
pg_query = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.12"
thiserror = "2.0"
anyhow = "1.0"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"

[features]
bridge-tests = []

[dev-dependencies]
insta = { version = "1.34", features = ["json", "yaml", "redactions"] }
proptest = "1.4"
tempfile = "3.8"
